--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,7 @@
         tools:ignore="ContentDescription" />
 
     <com.gzy.cloudmusicanimation.GramophoneView
+        android:id="@+id/gramophone_view"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
